--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/three": "^9.3.1",
+    "@react-three/drei": "^7.22.6",
+    "@react-three/fiber": "^7.0.19",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "three": "^0.134.0",
+    "valtio": "^1.2.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
